--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,16 @@
   box-sizing: border-box;
 }
 
+:root {
+  /* 
+   * Opt-in to interpolating between keywords in transitions and animations.
+   * This property inherits.
+   *
+   * @see https://developer.mozilla.org/en-US/docs/Web/CSS/interpolate-size
+   */
+  interpolate-size: allow-keywords;
+}
+
 html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
