--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,11 @@ html {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   --side-padding: 1rem;
   padding-inline: 1rem;
